defines Accounts as Game's owner.
updates db definition, repository, and business logic related to it.